--- a/TIENDA/index.html
+++ b/TIENDA/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>CREANDO UNA TIENDA DE AGUACATES</h1>
+    <div id="container"></div>
     <script src="index.js"></script>
 </body>
 </html>
